bug - unique names are needed for resource files when modules are not used. Vaadin needs exactly one highest level node in html text.